# pagedown

./: .gitignore  .gitmodules  Cargo.toml  README.md
docs/: readme-config.toml  readme.md  renderReadme.sh
examples/: render-config.toml  sample.md
src/: ir.rs  lib.rs  main.rs  parser.rs  render.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/components/: ConfigControls.tsx  ConfigEditorTab.tsx  EditorPane.tsx  MarkdownRendererTab.tsx  PdfPreview.tsx  Toolbar.tsx
web/src/config/: tomlConfig.ts
web/src/fixtures/: sample.ts
web/src/render/: renderClient.ts
