[package]
name = "native_markdown_pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
printpdf = { version = "0.9.1", default-features = false, features = ["jpeg", "png", "pnm", "svg"] }
lopdf = { version = "0.39.0", default-features = false, features = ["time"] }
pagetex = { path = "pagetex" }
pulldown-cmark = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
toml = "0.9.8"
